--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,4 +1,5 @@
 <% include partials/hacheader %>
     <h1><%= post.title %></h1>
     <p><%= post.description %></p>
+    <a href="/hacking/<%=post._id%>/edit">Edit</a>
 <% include partials/footer %>
