--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,9 +1,8 @@
-<% include partials/hacheader %>
+
 <h1>Edit <%= post.title %></h1>
 <form action="/hacking/<%=post._id%>?_override=PUT" method="POST">
-    <input type="text" name="title" value="<%=post.title%>">
-    <textarea name="description"><%=post.description%></textarea>
+    <input type="text" name="post[title]" value="<%=post.title%>">
+    <textarea name="post[description]"><%=post.description%></textarea>
     <button>Submit</button>
 </form>
-
 <% include partials/footer %>
