add routes directory included with hacking routes modify app.js to work with new routes directory

--- a/views/partials/hacheader.ejs
+++ b/views/partials/hacheader.ejs
@@ -17,7 +17,7 @@
         </div>
         <ul class="nav navbar-nav">
           <li><a href="/hacking/add">Add post</a></li>
-          <li><a href="/hacking/remove">Remove a post</a></li>
+          <li><a href="/hacking/delete">Remove a post</a></li>
         </ul>
       </div>
     </nav>
