fix delete buttons and edit buttons

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,3 +2,9 @@
     background-color: black;
     border-color: #030033;
 }
+.delete-form{
+    display: inline;
+}
+body{
+    background: black;
+}
