--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,4 +1,4 @@
-
+<% include partials/hacheader %>
 <h1>Edit <%= post.title %></h1>
 <form action="/hacking/<%=post._id%>?_override=PUT" method="POST">
     <input type="text" name="post[title]" value="<%=post.title%>">
