--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -39,9 +39,46 @@
                       </li>             
               </ul>
           </li>
-
-          <li><a href="#">Science</a></li>
-          <li><a href="#">Mathematics</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown"href="#">
+              Science
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Physics</a></li>
+              <li><a href="#">Chemistry</a></li>
+              <li><a href="#">Biology</a></li>
+              <li><a href="#">Astronomy</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+              Mathematics
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Algebra</a></li>
+              <li><a href="#">Geometry</a></li>
+              <li><a href="#">Linear Algebra</a></li>
+              <li><a href="#">Trigonometry</a></li>
+              <li><a href="#">Statistics</a></li>
+              <li><a href="#">Calculus</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+              Social Studies
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="#">World History</a></li>
+              <li><a href="#">European History</a></li>
+              <li><a href="#">Us history</a></li>
+              <li><a href="#">Civics</a></li>
+              <li><a href="#">Economics</a></li>
+              <li><a href="#">Art</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </nav>
