--- a/views/partials/proheader.ejs
+++ b/views/partials/proheader.ejs
@@ -32,10 +32,10 @@
                         &times;
                     </span>
                 </button>
-                <h4 class="modal-title">Add a hacking post</h4>
+                <h4 class="modal-title">Add a programming post</h4>
             </div>
             <div class="modal-body">
-                <form action="/hacking" method="POST">
+                <form action="/programming" method="POST">
                     <input type="text" name="title" placeholder="title">
                     <textarea class="form-control" name="description"></textarea>
             </div>
