add new models, views, and routes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,10 +45,10 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li><a href="#">Physics</a></li>
-              <li><a href="#">Chemistry</a></li>
-              <li><a href="#">Biology</a></li>
-              <li><a href="#">Astronomy</a></li>
+              <li><a href="/physics">Physics</a></li>
+              <li><a href="/chemistry">Chemistry</a></li>
+              <li><a href="/biology">Biology</a></li>
+              <li><a href="/astronomy">Astronomy</a></li>
             </ul>
           </li>
           <li class="dropdown">
@@ -57,12 +57,12 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li><a href="#">Algebra</a></li>
-              <li><a href="#">Geometry</a></li>
-              <li><a href="#">Linear Algebra</a></li>
-              <li><a href="#">Trigonometry</a></li>
-              <li><a href="#">Statistics</a></li>
-              <li><a href="#">Calculus</a></li>
+              <li><a href="/algebra">Algebra</a></li>
+              <li><a href="/geometry">Geometry</a></li>
+              <li><a href="/linear-algebra">Linear Algebra</a></li>
+              <li><a href="/trigonometry">Trigonometry</a></li>
+              <li><a href="/statistics">Statistics</a></li>
+              <li><a href="/calculus">Calculus</a></li>
             </ul>
           </li>
           <li class="dropdown">
@@ -71,12 +71,12 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
-              <li><a href="#">World History</a></li>
-              <li><a href="#">European History</a></li>
-              <li><a href="#">Us history</a></li>
-              <li><a href="#">Civics</a></li>
-              <li><a href="#">Economics</a></li>
-              <li><a href="#">Art</a></li>
+              <li><a href="/world-history">World History</a></li>
+              <li><a href="/european-history">European History</a></li>
+              <li><a href="/us-history">Us history</a></li>
+              <li><a href="/civics">Civics</a></li>
+              <li><a href="/economy">Economics</a></li>
+              <li><a href="/art">Art</a></li>
             </ul>
           </li>
         </ul>
